# axiom

./: .gitignore  context_provider.py  docker-compose.debug.yml  docker-compose.yml
auth/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  jwt_generator.py  jwt_validator.py  pyproject.toml  requirements.txt
auth/alembic/: env.py
auth/alembic/versions/: 103042591b5e_fix_profile_first_name_field.py  3a9349c39ef0_make_role_titles_unique.py  47b76ef6b920_add_profile_avatar.py  55bc4acb0bb1_initial.py  5b8dc743051f_initial.py  6b7127cd9689_add_cascading_delete.py
auth/src/: config.py  main.py
auth/src/admin/: auth_provider.py  backend.py
auth/src/api/: api_exceptions.py  login_api.py  registeration_api.py  registration.py  registration_api.py  router.py  users_api.py
auth/src/api/v1/: login_api.py  profiles_api.py  registration_api.py  router.py
auth/src/api/v2/: login_api.py  profiles_api.py  router.py
auth/src/gateway/: email_gateway.py
auth/src/middleware/: auth_middleware.py
auth/src/models/: auth_models.py  mixins.py  models.py
auth/src/repository/: mixins.py  models.py  profile_repository.py  role_repository.py  unit_of_work.py  user_repository.py
auth/src/schemas/: login_schema.py  login_schemas.py  mixins.py  profile_schemas.py  role_schemas.py  role_shchemas.py  schema_mixins.py  user_schemas.py
auth/src/services/: jwt_service.py  login_service.py  password_service.py  profile_service.py  registration_service.py  service_exception.py  user_service.py
auth/src/utils/: __init__.py  debug_print.py  jwt_service.py  logging.py  openapi.py
common/: .gitignore  async_main.py  main.py  pyproject.toml  utils.py
common/axiom/: logging.py
common/axiom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
common/axiom/auth/: __init__.py  dependencies.py
common/axiom/filters/: __init__.py  base_filter.py  pagination.py
common/axiom/middleware/: auth_middleware.py
common/axiom/models/: __init__.py  base.py  exceptions.py  model_mixins.py
common/axiom/orm/: model_mixins.py
common/axiom/permissions/: __init__.py  permissions.py
common/axiom/repository/: __init__.py  filter_map.py  generic_repository.py  repository.py  unit_of_work.py
common/axiom/schema/: schema_mixins.py
common/axiom/schemas/: __init__.py  schema_mixins.py
common/axiom/service/: __init__.py  crud_service.py  generic_crud_service.py
common/axiom/services/: __init__.py  jwt_service.py
storage/: .gitignore  Dockerfile  cassandra.yaml  drawSQL-pgsql-export-2025-10-25.sql  main.py  pyproject.toml
storage/alembic/: env.py
storage/alembic/versions/: d4c9f678730a_init_storage_db_structure.py
storage/src/: config.py  main.py
storage/src/api/: chapter_api.py  chunk_api.py  filters.py  router.py
storage/src/dto/: chapter_dto.py
storage/src/models/: storage_models.py
storage/src/repository/: chapter_repository.py  chunk_repository.py  connection.py
storage/src/schemas/: chapter_schemas.py  chunk_schemas.py
storage/src/services/: chapter_service.py  chunk_service.py
storage/src/utils/: db.py
