[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "cryptography==44.0.2",
    "pyjwt==2.10.1",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.2",
    "pydantic-settings>=2.9.0",
    "aiosqlite>=0.21.0",
]
