[project]
name = "storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "alembic>=1.17.0",
    "axiom>=0.2.0",
    "fastapi[standard]>=0.119.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "starlette-admin>=0.15.1",
]


[tool.uv.sources]
axiom = { index = "axiom" }

[[tool.uv.index]]
name = "axiom"
url = "https://pypi.axiomae.xyz/"
explicit = true
